# avibot

./: README.md  docker-compose.yml
.github/workflows/: publish.yml
bot/: Dockerfile  pyproject.toml
bot/avibot/: __init__.py  __main__.py  config.py
bot/avibot/core/: __init__.py  bot.py  checks.py  cog_base.py  cog_manager.py  context.py  database.py  logger.py
bot/avibot/exts/commands/: __init__.py  commands_cog.py
bot/avibot/exts/complaint/: __init__.py  complaint_cog.py
bot/avibot/exts/nsa/: __init__.py  nsa_cog.py
bot/avibot/exts/youtube/: __init__.py  exceptions.py  livechat.py  youtube_cog.py
bot/tests/: test_avibot.py
env/: .gitignore  bot.example.env  postgres.example.env
